my gallery first commit

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,43 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+@layer components {
+  .spinner {
+    margin: 3.2rem auto 1.6rem;
+    width: 60px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    border: 8px solid theme("colors.primary.900");
+    border-right-color: theme("colors.primary.200");
+    animation: rotate 1s infinite linear;
+  }
+
+  .spinner-mini {
+    margin: 0;
+    width: 20px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    border: 2px solid theme("colors.primary.200");
+    border-right-color: transparent;
+    animation: rotate 1s infinite linear;
+  }
+
+  @keyframes rotate {
+    to {
+      transform: rotate(1turn);
+    }
+  }
+}
+
+/* For data picker */
+
+.rdp {
+  --rdp-cell-size: 32px !important;
+  --rdp-accent-color: theme("colors.accent.500") !important;
+  --rdp-background-color: theme("colors.accent.600") !important;
+  margin: 0 !important;
+}
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -14,20 +50,71 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
+} */
+/* button,
+a,
+div {
+  transition: all 0.3s ease;
+} */
+button:focus,
+a:focus,
+input:focus,
+div:focus,
+header:focus,
+nav:focus main:focus {
+  outline: none !important;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+button:focus-visible,
+a:focus-visible,
+input:focus-visible,
+div:focus-visible,
+header:focus-visible,
+main:focus-visible,
+nav:focus-visible {
+  outline: none !important;
 }
+/* 
+body {
+  color: #fcfcfc;
+  background: #180920;
+} */
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+.masonry-grid {
+  display: flex;
+  margin-left: -10px; /* Optional for better alignment */
+  width: auto;
+}
+
+.masonry-grid-column {
+  padding-left: 10px; /* Space between columns */
+  background-clip: padding-box;
+}
+
+.masonry-item {
+  margin-bottom: 15px; /* Space between items */
+}
+
+* {
+  outline-offset: 0px !important;
+  border: none !important;
+  outline: none !important;
+}
+
+*:focus {
+  outline-offset: 0px !important;
+  border: none !important;
+  outline: none !important;
+}
+
+*:focus-visible {
+  outline-offset: 0px !important;
+  border: none !important;
+  outline: none !important;
+  box-shadow: none !important;
 }
