--- a/app/globals.css
+++ b/app/globals.css
@@ -34,8 +34,8 @@
 
 .rdp {
   --rdp-cell-size: 32px !important;
-  /* --rdp-accent-color: theme("colors.accent.500") !important; */
-  /* --rdp-background-color: theme("colors.accent.600") !important; */
+  --rdp-accent-color: theme("colors.accent.500") !important;
+  --rdp-background-color: theme("colors.accent.600") !important;
   margin: 0 !important;
 }
 
